# aws-console-link

./: Cargo.toml  README.md
src/: main.rs
