[package]
name = "aws-console-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
open = "3.0.2"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
